# mlx-cuda

./: CMakeLists.txt
mlx/: CMakeLists.txt  dtype_utils.cpp  dtype_utils.h
mlx/backend/common/: utils.h
mlx/backend/cuda/: CMakeLists.txt  allocator.cpp  allocator.h  binary.cu  copy.cu  device.cpp  device.h  dtype_utils.cuh  event.cpp  event.cu  event.h  fence.cu  matmul.cpp  metal.cpp  normalization.cu  primitives.cpp  primitives.cu  reduce.cu  softmax.cu  sort.cu  unary.cu  utils.cpp  utils.h
mlx/backend/cuda/kernels/: arange.cuh  arg_reduce.cuh  bf16_math.cuh  binary.cuh  binary_ops.cuh  copy.cuh  cucomplex_math.cuh  fp16_math.cuh  random.cuh  reduce_ops.cuh  repeat_iterator.cuh  strided_iterator.cuh  unary_ops.cuh  utils.cuh
mlx/backend/cuda/kernels/iterators/: cast_iterator.cuh  general_iterator.cuh
mlx/backend/metal/: CMakeLists.txt  matmul.cpp
tests/: CMakeLists.txt
